--- a/src/components/Navbar/DashboardStyle.css
+++ b/src/components/Navbar/DashboardStyle.css
@@ -3,6 +3,10 @@
     left: 110vh;
 } */
 
+.MySidebar #IconeSidebar {
+    display: none;
+}
+
 .list-inline-item{
     list-style: none !important;
     text-decoration: none !important;
@@ -15,6 +19,14 @@
         left: 11vh;
     } */
 
+    .MySidebar #IconeSidebar {
+        display: block;
+        color: #fff !important;
+        left: 20vh;
+        margin-top: 15px !important;
+        font-size: 15px;
+    } 
+
     #nav-dropdown-dark-example{
         margin-left: 30px;
     }
@@ -24,10 +36,11 @@
         margin-top: 10px;
     }
 
-    /* .DrodownNavbar {
+    .menu-controller-icon {
       margin-left: 0 !important;
       margin-right: 0 !important;
-    } */
+      font-size: x-large;
+    }
 
     /* .menu-controller-icon{
         display: none;
@@ -37,9 +50,9 @@
         display: block !important;
     }
 
-    .titleSidebar{
+    /* .titleSidebar{
         display: none !important;
-    }
+    } */
 
     /* .MenuDashboard .MySidebard{
         display
@@ -66,10 +79,10 @@
         border-radius: 100%;
     } */
 
-    .PanerSidebar{
+    /* .PanerSidebar{
         line-height: 100vh !important;
         margin-bottom: 4vh !important;
-    }
+    } */
 
     .textFooter{
         display: flex;
