modification button nav

--- a/src/components/Navbar/DashboardStyle.css
+++ b/src/components/Navbar/DashboardStyle.css
@@ -24,7 +24,7 @@
         color: #fff !important;
         left: 20vh;
         margin-top: 15px !important;
-        font-size: 15px;
+        font-size: 15px !important;
     } 
 
     #nav-dropdown-dark-example{
